// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WriteInInput Snapshots renders at character limit state 1`] = `
<div
  class="w-full "
>
  <div
    class="relative rounded-card border-2 transition-all duration-200 border-gray-200 bg-white hover:border-gray-300"
  >
    <textarea
      aria-describedby="char-count-info"
      aria-label="Written answer input"
      class="w-full p-4 rounded-card resize-none focus:outline-none text-gray-800 text-base font-body bg-transparent"
      placeholder="Type your answer here..."
      rows="4"
    >
      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
    </textarea>
    <div
      class="flex items-center justify-between px-3 py-2 border-t border-gray-100"
    >
      <button
        aria-label="Clear text"
        class="text-xs text-gray-400 hover:text-red-400 transition-colors flex items-center gap-1 font-medium"
        type="button"
      >
        <svg
          class="w-3.5 h-3.5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Clear
      </button>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="shrink-0"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <circle
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#e5e7eb"
            stroke-width="2"
          />
          <circle
            class="transition-all duration-300"
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#ef4444"
            stroke-dasharray="50.3 50.3"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 10 10)"
          />
        </svg>
        <span
          class="text-xs font-bold transition-colors text-red-500"
          id="char-count-info"
        >
          240
          /
          240
        </span>
      </div>
    </div>
  </div>
  <p
    class="mt-2 text-xs text-gray-400"
  >
    Write clearly. You can use +, -, ×, ÷, = and fractions like 3/4.
  </p>
</div>
`;

exports[`WriteInInput Snapshots renders disabled state correctly 1`] = `
<div
  class="w-full "
>
  <div
    class="relative rounded-card border-2 transition-all duration-200 border-gray-200 bg-gray-50"
  >
    <textarea
      aria-describedby="char-count-info"
      aria-label="Written answer input"
      class="w-full p-4 rounded-card resize-none focus:outline-none text-gray-800 text-base font-body bg-gray-50 cursor-not-allowed text-gray-500"
      disabled=""
      placeholder="Type your answer here..."
      rows="4"
    >
      Disabled answer
    </textarea>
    <div
      class="flex items-center justify-between px-3 py-2 border-t border-gray-100"
    >
      <div />
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="shrink-0"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <circle
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#e5e7eb"
            stroke-width="2"
          />
          <circle
            class="transition-all duration-300"
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#3a7bd5"
            stroke-dasharray="3.14375 50.3"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 10 10)"
          />
        </svg>
        <span
          class="text-xs font-bold transition-colors text-gray-400"
          id="char-count-info"
        >
          15
          /
          240
        </span>
      </div>
    </div>
  </div>
  <p
    class="mt-2 text-xs text-gray-400"
  >
    Write clearly. You can use +, -, ×, ÷, = and fractions like 3/4.
  </p>
</div>
`;

exports[`WriteInInput Snapshots renders empty state correctly 1`] = `
<div
  class="w-full "
>
  <div
    class="relative rounded-card border-2 transition-all duration-200 border-gray-200 bg-white hover:border-gray-300"
  >
    <textarea
      aria-describedby="char-count-info"
      aria-label="Written answer input"
      class="w-full p-4 rounded-card resize-none focus:outline-none text-gray-800 text-base font-body bg-transparent"
      placeholder="Type your answer here..."
      rows="4"
    />
    <div
      class="flex items-center justify-between px-3 py-2 border-t border-gray-100"
    >
      <div />
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="shrink-0"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <circle
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#e5e7eb"
            stroke-width="2"
          />
          <circle
            class="transition-all duration-300"
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#3a7bd5"
            stroke-dasharray="0 50.3"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 10 10)"
          />
        </svg>
        <span
          class="text-xs font-bold transition-colors text-gray-400"
          id="char-count-info"
        >
          0
          /
          240
        </span>
      </div>
    </div>
  </div>
  <p
    class="mt-2 text-xs text-gray-400"
  >
    Write clearly. You can use +, -, ×, ÷, = and fractions like 3/4.
  </p>
</div>
`;

exports[`WriteInInput Snapshots renders near character limit state 1`] = `
<div
  class="w-full "
>
  <div
    class="relative rounded-card border-2 transition-all duration-200 border-gray-200 bg-white hover:border-gray-300"
  >
    <textarea
      aria-describedby="char-count-info"
      aria-label="Written answer input"
      class="w-full p-4 rounded-card resize-none focus:outline-none text-gray-800 text-base font-body bg-transparent"
      placeholder="Type your answer here..."
      rows="4"
    >
      AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
    </textarea>
    <div
      class="flex items-center justify-between px-3 py-2 border-t border-gray-100"
    >
      <button
        aria-label="Clear text"
        class="text-xs text-gray-400 hover:text-red-400 transition-colors flex items-center gap-1 font-medium"
        type="button"
      >
        <svg
          class="w-3.5 h-3.5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Clear
      </button>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="shrink-0"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <circle
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#e5e7eb"
            stroke-width="2"
          />
          <circle
            class="transition-all duration-300"
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#f97316"
            stroke-dasharray="41.91666666666667 50.3"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 10 10)"
          />
        </svg>
        <span
          class="text-xs font-bold transition-colors text-orange-500"
          id="char-count-info"
        >
          200
          /
          240
        </span>
      </div>
    </div>
  </div>
  <p
    class="mt-2 text-xs text-gray-400"
  >
    Write clearly. You can use +, -, ×, ÷, = and fractions like 3/4.
  </p>
</div>
`;

exports[`WriteInInput Snapshots renders with additional className 1`] = `
<div
  class="w-full custom-class mt-4"
>
  <div
    class="relative rounded-card border-2 transition-all duration-200 border-gray-200 bg-white hover:border-gray-300"
  >
    <textarea
      aria-describedby="char-count-info"
      aria-label="Written answer input"
      class="w-full p-4 rounded-card resize-none focus:outline-none text-gray-800 text-base font-body bg-transparent"
      placeholder="Type your answer here..."
      rows="4"
    >
      Test
    </textarea>
    <div
      class="flex items-center justify-between px-3 py-2 border-t border-gray-100"
    >
      <button
        aria-label="Clear text"
        class="text-xs text-gray-400 hover:text-red-400 transition-colors flex items-center gap-1 font-medium"
        type="button"
      >
        <svg
          class="w-3.5 h-3.5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Clear
      </button>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="shrink-0"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <circle
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#e5e7eb"
            stroke-width="2"
          />
          <circle
            class="transition-all duration-300"
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#3a7bd5"
            stroke-dasharray="0.8383333333333334 50.3"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 10 10)"
          />
        </svg>
        <span
          class="text-xs font-bold transition-colors text-gray-400"
          id="char-count-info"
        >
          4
          /
          240
        </span>
      </div>
    </div>
  </div>
  <p
    class="mt-2 text-xs text-gray-400"
  >
    Write clearly. You can use +, -, ×, ÷, = and fractions like 3/4.
  </p>
</div>
`;

exports[`WriteInInput Snapshots renders with custom max length 1`] = `
<div
  class="w-full "
>
  <div
    class="relative rounded-card border-2 transition-all duration-200 border-gray-200 bg-white hover:border-gray-300"
  >
    <textarea
      aria-describedby="char-count-info"
      aria-label="Written answer input"
      class="w-full p-4 rounded-card resize-none focus:outline-none text-gray-800 text-base font-body bg-transparent"
      placeholder="Type your answer here..."
      rows="4"
    >
      Short
    </textarea>
    <div
      class="flex items-center justify-between px-3 py-2 border-t border-gray-100"
    >
      <button
        aria-label="Clear text"
        class="text-xs text-gray-400 hover:text-red-400 transition-colors flex items-center gap-1 font-medium"
        type="button"
      >
        <svg
          class="w-3.5 h-3.5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Clear
      </button>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="shrink-0"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <circle
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#e5e7eb"
            stroke-width="2"
          />
          <circle
            class="transition-all duration-300"
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#3a7bd5"
            stroke-dasharray="5.03 50.3"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 10 10)"
          />
        </svg>
        <span
          class="text-xs font-bold transition-colors text-gray-400"
          id="char-count-info"
        >
          5
          /
          50
        </span>
      </div>
    </div>
  </div>
  <p
    class="mt-2 text-xs text-gray-400"
  >
    Write clearly. You can use +, -, ×, ÷, = and fractions like 3/4.
  </p>
</div>
`;

exports[`WriteInInput Snapshots renders with custom placeholder 1`] = `
<div
  class="w-full "
>
  <div
    class="relative rounded-card border-2 transition-all duration-200 border-gray-200 bg-white hover:border-gray-300"
  >
    <textarea
      aria-describedby="char-count-info"
      aria-label="Written answer input"
      class="w-full p-4 rounded-card resize-none focus:outline-none text-gray-800 text-base font-body bg-transparent"
      placeholder="Show your work here..."
      rows="4"
    />
    <div
      class="flex items-center justify-between px-3 py-2 border-t border-gray-100"
    >
      <div />
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="shrink-0"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <circle
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#e5e7eb"
            stroke-width="2"
          />
          <circle
            class="transition-all duration-300"
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#3a7bd5"
            stroke-dasharray="0 50.3"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 10 10)"
          />
        </svg>
        <span
          class="text-xs font-bold transition-colors text-gray-400"
          id="char-count-info"
        >
          0
          /
          240
        </span>
      </div>
    </div>
  </div>
  <p
    class="mt-2 text-xs text-gray-400"
  >
    Write clearly. You can use +, -, ×, ÷, = and fractions like 3/4.
  </p>
</div>
`;

exports[`WriteInInput Snapshots renders with math symbols in answer 1`] = `
<div
  class="w-full "
>
  <div
    class="relative rounded-card border-2 transition-all duration-200 border-gray-200 bg-white hover:border-gray-300"
  >
    <textarea
      aria-describedby="char-count-info"
      aria-label="Written answer input"
      class="w-full p-4 rounded-card resize-none focus:outline-none text-gray-800 text-base font-body bg-transparent"
      placeholder="Type your answer here..."
      rows="4"
    >
      3/4 + 1/4 = 1, and 5 × 6 = 30
    </textarea>
    <div
      class="flex items-center justify-between px-3 py-2 border-t border-gray-100"
    >
      <button
        aria-label="Clear text"
        class="text-xs text-gray-400 hover:text-red-400 transition-colors flex items-center gap-1 font-medium"
        type="button"
      >
        <svg
          class="w-3.5 h-3.5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Clear
      </button>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="shrink-0"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <circle
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#e5e7eb"
            stroke-width="2"
          />
          <circle
            class="transition-all duration-300"
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#3a7bd5"
            stroke-dasharray="6.077916666666667 50.3"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 10 10)"
          />
        </svg>
        <span
          class="text-xs font-bold transition-colors text-gray-400"
          id="char-count-info"
        >
          29
          /
          240
        </span>
      </div>
    </div>
  </div>
  <p
    class="mt-2 text-xs text-gray-400"
  >
    Write clearly. You can use +, -, ×, ÷, = and fractions like 3/4.
  </p>
</div>
`;

exports[`WriteInInput Snapshots renders with text value 1`] = `
<div
  class="w-full "
>
  <div
    class="relative rounded-card border-2 transition-all duration-200 border-gray-200 bg-white hover:border-gray-300"
  >
    <textarea
      aria-describedby="char-count-info"
      aria-label="Written answer input"
      class="w-full p-4 rounded-card resize-none focus:outline-none text-gray-800 text-base font-body bg-transparent"
      placeholder="Type your answer here..."
      rows="4"
    >
      My answer is 42
    </textarea>
    <div
      class="flex items-center justify-between px-3 py-2 border-t border-gray-100"
    >
      <button
        aria-label="Clear text"
        class="text-xs text-gray-400 hover:text-red-400 transition-colors flex items-center gap-1 font-medium"
        type="button"
      >
        <svg
          class="w-3.5 h-3.5"
          fill="none"
          stroke="currentColor"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
        </svg>
        Clear
      </button>
      <div
        class="flex items-center gap-2"
      >
        <svg
          class="shrink-0"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <circle
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#e5e7eb"
            stroke-width="2"
          />
          <circle
            class="transition-all duration-300"
            cx="10"
            cy="10"
            fill="none"
            r="8"
            stroke="#3a7bd5"
            stroke-dasharray="3.14375 50.3"
            stroke-linecap="round"
            stroke-width="2"
            transform="rotate(-90 10 10)"
          />
        </svg>
        <span
          class="text-xs font-bold transition-colors text-gray-400"
          id="char-count-info"
        >
          15
          /
          240
        </span>
      </div>
    </div>
  </div>
  <p
    class="mt-2 text-xs text-gray-400"
  >
    Write clearly. You can use +, -, ×, ÷, = and fractions like 3/4.
  </p>
</div>
`;
